# libdiscord

./: .gitignore  Makefile.am  README.md  configure.ac  discord.pc.in  test.c
src/: Makefile.am  base64.c  connection.c  connection.h  curl_codes.h  discord.def  discord.h  header.h  helpers.c  http.c  websocket.c
src/http/: http.h
